--- a/src/Presets/adminlte-stubs/app.scss
+++ b/src/Presets/adminlte-stubs/app.scss
@@ -5,24 +5,22 @@
 @import 'variables';
 
 // Bootstrap
-@import '~bootstrap/scss/bootstrap';
+@import 'bootstrap/scss/bootstrap';
+@import "bootstrap/scss/maps"; 
 
 // AdminLTE
-@import '~admin-lte/build/scss/AdminLTE';
+@import 'admin-lte/src/scss/adminlte.scss';
 
 // Fontawesome
-@import '~@fortawesome/fontawesome-free/scss/fontawesome';
-@import '~@fortawesome/fontawesome-free/scss/solid';
+@import '@fortawesome/fontawesome-free/scss/fontawesome';
+@import '@fortawesome/fontawesome-free/scss/solid';
 
 //Datatables
-@import '~datatables.net-bs4/css/dataTables.bootstrap4';
-@import '~datatables.net-responsive-bs4/css/responsive.bootstrap4';
+@import 'datatables.net-bs5/css/dataTables.bootstrap5';
+@import 'datatables.net-responsive-bs5/css/responsive.bootstrap5';
 
 //Selectize
-@import "~selectize/dist/css/selectize.bootstrap3.css";
-
-//Datetimepicker
-@import '~pc-bootstrap4-datetimepicker/build/css/bootstrap-datetimepicker.css';
+@import "selectize/dist/css/selectize.bootstrap3.css";
 
 //Toastr
-@import '~toastr/build/toastr.min.css';
+@import 'toastr/build/toastr.min.css';
