--- a/src/Presets/adminlte-stubs/app.scss
+++ b/src/Presets/adminlte-stubs/app.scss
@@ -5,21 +5,21 @@
 @import 'variables';
 
 // Bootstrap
-@import '~bootstrap/scss/bootstrap.scss';
+@import 'bootstrap/scss/bootstrap.scss';
 
 // AdminLTE
 @import 'admin-lte/src/scss/adminlte.scss';
 
 // Fontawesome
-@import '~@fortawesome/fontawesome-free/scss/fontawesome';
-@import '~@fortawesome/fontawesome-free/scss/solid';
+@import '@fortawesome/fontawesome-free/scss/fontawesome';
+@import '@fortawesome/fontawesome-free/scss/solid';
 
 //Datatables
-@import '~datatables.net-bs5/css/dataTables.bootstrap5';
-@import '~datatables.net-responsive-bs5/css/responsive.bootstrap5';
+@import 'datatables.net-bs5/css/dataTables.bootstrap5';
+@import 'datatables.net-responsive-bs5/css/responsive.bootstrap5';
 
 //Toastr
-@import '~toastr/build/toastr.min.css';
+@import 'toastr/build/toastr.min.css';
 
 //VueMultiselect
 @import 'vue-multiselect/dist/vue-multiselect.css';
