--- a/src/Presets/adminlte-stubs/app.scss
+++ b/src/Presets/adminlte-stubs/app.scss
@@ -23,3 +23,7 @@
 
 //VueMultiselect
 @import 'vue-multiselect/dist/vue-multiselect.css';
+
+.toast-success { background-color: $green !important; }
+.toast-warning { background-color: $orange !important; }
+.toast-error { background-color: $red !important; }
